# paca

./: .gitignore  README.md  ROADMAP.md
.claude/commands/: paca-setup.md  paca.md
.github/workflows/: ai-agent-pr-ci.yml  api-pr-ci.yml  cd.yml  realtime-pr-ci.yml  wayfarer-deploy.yml  wayfarer-mcp-publish.yml
apps/e2e/: playwright.config.ts
apps/mcp/: ALL_TOOLS.md  README.md  package-lock.json  package.json
apps/web/: Dockerfile  index.html  package.json  tsconfig.app.json  vite.config.ts
deploy/: .env.dev.example  .env.production.example  README.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.prod.yml
deploy/nginx/: gateway.conf  gateway.dev.conf
docs/: README.md
docs/ai-agent/: ai-agent-service.md  (+6 more)
plugins/: README.md
scripts/: QUICK_START.md  README.md  SUMMARY.md  install-claude-skill.sh  install-local-plugin.sh  install-plugin.sh  install.sh  remove-plugin.sh  uninstall-plugin.sh  upgrade.sh
services/ai-agent/: .coverage  .env.example  Dockerfile  Dockerfile.dev  conftest.py  pyproject.toml
services/ai-agent/data/: llm_models.json
services/ai-agent/scripts/: generate_llm_models.py
services/ai-agent/src/: config.py  db.py  executor.py  main.py  repo_adapter.py  streams.py  worker.py
services/ai-agent/src/agent/: builder.py  docker_workspace.py  executor.py  prompt.py  repo_tools.py  trigger_skills.py
services/ai-agent/src/core/: registry.py  streams.py
services/ai-agent/src/models/: agent.py  conversation_status.py
services/ai-agent/src/repositories/: agent_repository.py  conversation_repository.py
services/ai-agent/src/routes/: conversations.py  llm.py
services/ai-agent/src/skills/: paca-format.md  paca.md
services/ai-agent/src/skills/ba/: SKILL.md
services/ai-agent/src/skills/developer/: SKILL.md
services/ai-agent/src/skills/manual_tester/: SKILL.md
services/ai-agent/src/skills/paca-breakdown/: SKILL.md
services/ai-agent/src/skills/paca-clarify/: SKILL.md
services/ai-agent/src/skills/paca-do/: SKILL.md
services/ai-agent/src/skills/paca-doc/: SKILL.md
services/ai-agent/src/skills/paca-epic/: SKILL.md
services/ai-agent/src/skills/paca-estimate/: SKILL.md
services/ai-agent/src/skills/paca-prioritize/: SKILL.md
services/ai-agent/src/skills/paca-sprint/: SKILL.md
services/ai-agent/src/skills/paca-test/: SKILL.md
services/ai-agent/src/skills/paca-workflow/: SKILL.md
services/ai-agent/src/skills/po_assistant/: SKILL.md
services/ai-agent/tests/: test_builder.py  test_docker_workspace.py  test_executor.py  test_prompt.py  test_repo_tools.py  test_routes.py  test_streams.py  test_trigger_skills.py  test_worker.py
services/ai-agent/tests/e2e/: fake_llm_server.py  test_run_conversation_e2e.py
(+632 files in other folders)
