[project]
name = "paca-ai-agent"
version = "0.1.0"
description = "Paca AI Agent Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openhands-sdk>=0.1.0",
    "openhands-tools>=0.1.0",
    "docker>=7.0.0",
    "redis[hiredis]>=5.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
