[project]
name = "paca-ai-agent"
version = "0.1.0"
description = "Paca AI Agent Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.30.0",
    "openhands-sdk>=1.29.0",
    "openhands-tools>=1.29.0",
    "docker>=7.0.0",
    "redis[hiredis]>=5.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "cryptography>=49.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
